# AAU-Drone

./: .gitignore  .gitmodules  README.md  codeforreadme.txt  setup_acados.sh
drone/: CMakeLists.txt  package.xml
drone/scripts/: GPS.py
src/drone/: CMakeLists.txt  package.xml
src/drone/scripts/: GPS.py  Parse.py  clock.py  emulateViconData.py  fc_cmd.py  imu.py  manual_cmd.py  viconData.py
src/drone/src/: GPS.cpp  Sensor.cpp
src/drone_interfaces/: CMakeLists.txt  package.xml
src/drone_interfaces/msg/: DroneCommand.msg  DroneIMU.msg  GPSData.msg  SensorData.msg
src/kalman_module/: CMakeLists.txt  package.xml
src/simulation/: CMakeLists.txt  package.xml
src/simulation/launch/: simulation.launch.py
src/simulation/scripts/: pid_controller.py  simulation.py
src/trajectory_gen/: CMakeLists.txt  package.xml
src/trajectory_gen/config/: dnmpc_params.yaml
src/trajectory_gen/scripts/: goal_sender.py  mpc_module.py  mpc_trajectory.py
src/visualization_module/: CMakeLists.txt  package.xml
src/visualization_module/config/: rvizconfig.rviz
src/visualization_module/launch/: rviz_urdf.launch.py
src/visualization_module/models/: turtlebot3_burger.xacro
src/visualization_module/scripts/: drone.py
src/vizualisation_module/: CMakeLists.txt  package.xml
